--- a/style.css
+++ b/style.css
@@ -6,11 +6,27 @@ body{
 .header-footer {
     background-color: burlywood;
     list-style:none;
-    padding: 10px; /* расстояние содержимого до верхней границы */
+    padding-top: 5px; /* расстояние содержимого до верхней границы */
     border: solid black;
     height: 30px;
-    width: 600px;
+    text-align: right;
 }
+.header-footer2 {
+    background-color: burlywood;
+    list-style:none;
+    padding: 10 px;
+    border: solid black;
+    text-align: right;
+    text-decoration: none;
+    height: 60px;
+    padding-right: 20px;
+    
+}
+
+.header-footer2:hover{
+    color: green;
+}
+
 .menu-item{
     display: inline-block;
     margin-right: 20px;
@@ -30,14 +46,44 @@ body{
 .descr{
     text-align: justify; /*выравнивание по ширине*/
 }
-.tabl{
-    padding: 10px;
-    margin: auto;
-    width: 500px;
-}
+
 .imag{
     width: 200px;
     border:solid brown;
     outline: solid rgb(141, 24, 24);
     margin: 0 auto;
+}
+.find{
+    background-color:burlywood;
+
+}
+.item-card{
+    display: inline-block;
+    width: 300px;
+    margin-top: 10px;
+    padding: 5px;
+    margin-bottom: 10px;
+    margin-right: 15px;
+    
+}
+.item-card:hover {
+    outline: 1px solid black;
+}
+.item-image{
+    padding: 10px;
+    margin: auto;
+    width: 100px;
+}
+.description{
+    text-align: right;
+}
+.price{
+    display: inline-block;
+    padding-left: 100px;
+}
+.name{
+    display:inline-block;
+}
+.header-image{
+    width:20px;
 }
